# hash-query-language

./: .gitignore  .gitmodules  Cargo.toml  Compiler.py  Container.py  Expression.py  Guid.py  Hql.py  HqlListener.py  HqlVisitor.py  Operator.py  Query.py  README.md  Token.py  conf.json  conf.json.example  debug-index.json  hql.py  index.json  pyproject.toml  requirements.txt  setup-antlr4.sh
HaCEngine/: Dag.py  Doc.py  Exceptions.py  Parser.py  README.md  __init__.py  podman-clean.sh  podman-compose.yml
Hql/: Context.py  Exceptions.py  __init__.py  __main__.py
HqlCompiler/: .Data.py.swp  Compiler.py  Config.py  Container.py  Context.py  Data.py  Exceptions.py  Expression.py  Features.py  Guid.py  HqlVisitor.py  Operator.py  PolarsTools.py  Query.py  Registry.py  Results.py  Table.py  Types.py  __init__.py
compiler/: Compiler.py  Container.py  Expression.py  HqlVisitor.py  Operator.py  Query.py
containers/: .gitignore  Compose.py  Containers.py  build.sh  compose.yml  elastic.env.example
docs/: DaC.md  FAQ.md  FUNCTIONS.md  INGESTION.md  MANIFESTO.md  REFERENCES.md  TYPING.md  issue-creator.py
examples/: dac.hql
grammar/: .gitignore  Hql.g4  HqlLexer.interp  HqlLexer.py  HqlListener.py  HqlParser.py  HqlTokens.g4  HqlVisitor.py
notebooks/: Types.py  extend.ipynb  from-dicts.ipynb  nested-json.ipynb  network.json  project-merging.ipynb  project.ipynb  so-network-data.json  so-network-index.json  sorting.ipynb  super-nested.json  sysmon-3.json
src/: main.rs
tests/: README.md  merge.hql  nested-1.txt  nested-3.hql  project-test-big.hql  project-test.hql  (+9 more)
(+266 files in other folders)
